--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,6 +21,7 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_6
         targetCompatibility JavaVersion.VERSION_1_7
     }
+    sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/'] } }
 }
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -28,6 +29,6 @@ dependencies {
     compile 'org.roboguice:roboguice:3.+'
     provided 'org.roboguice:roboblender:3.+'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
-    compile project (':libs:facebook')
+    compile project(':libs:facebook')
 }
 
