--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,7 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:21.+'
-    compile 'org.roboguice:roboguice:3.+'
-    provided 'org.roboguice:roboblender:3.+'
+    compile 'org.roboguice:roboguice:2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile project(':libs:facebook')
 }
-
