--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,18 +2,22 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.plego.wagerocity" >
 
-    <meta-data android:name="roboguice.annotations.packages" android:value="roboguice,databasename"/>
+    <meta-data
+        android:name="roboguice.annotations.packages"
+        android:value="roboguice,databasename" />
 
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar"
-        >
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name=".android.activities.SplashActivity"
-            android:label="@string/title_activity_splash"
-            >
+            android:label="@string/title_activity_splash" >
+        </activity>
+        <activity
+            android:name=".android.activities.LoginActivity"
+            android:label="@string/title_activity_login" >
         </activity>
     </application>
 
