--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,5 +31,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:21.+'
     compile 'org.roboguice:roboguice:2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'com.squareup.retrofit:retrofit:1.7.1'
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
+    compile 'com.squareup.okhttp:okhttp:2.0.0'
+    compile 'com.squareup.okio:okio:1.0.1'
     compile project(':libs:facebook')
 }
