Added Teams Logos on Games List and Added Image Loading Code

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,5 +37,6 @@ dependencies {
     compile 'com.squareup.okhttp:okhttp:2.0.0'
     compile 'com.squareup.okio:okio:1.0.1'
     compile 'com.anjlab.android.iab.v3:library:1.0.+@aar'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile project(':libs:facebook')
 }
