--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,5 +38,6 @@ dependencies {
     compile 'com.squareup.okio:okio:1.0.1'
     compile 'com.anjlab.android.iab.v3:library:1.0.+@aar'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+    compile 'com.afollestad:material-dialogs:0.6.7.1'
     compile project(':libs:facebook')
 }
