--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     compile 'com.anjlab.android.iab.v3:library:1.0.+@aar'
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.afollestad:material-dialogs:0.6.7.1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile project(':libs:facebook')
 }
