--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,9 @@
         android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name=".android.activities.SplashActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +29,8 @@
         </activity>
         <activity
             android:name=".android.activities.LoginActivity"
-            android:label="@string/title_activity_login" >
+            android:label="@string/title_activity_login"
+            android:screenOrientation="portrait">
         </activity>
         <activity
             android:name="com.facebook.LoginActivity"
@@ -42,7 +45,9 @@
         <activity
             android:name=".android.activities.DashboardActivity"
             android:label="@string/title_activity_dashboard"
-            android:launchMode="singleInstance">
+            android:launchMode="singleInstance"
+            android:screenOrientation="portrait"
+            >
         </activity>
     </application>
 
