--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'cn.pedant.sweetalert:library:1.3'
+//    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile project(':libs:facebook')
     compile files('libs/simple.facebook.jar')
     compile files('/Users/haris/AndroidStudioProjects/wagerocity-android/libs/simple.facebook.jar')
