--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,25 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.plego.wagerocity" >
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.plego.wagerocity"
+
+        >
 
     <meta-data
-        android:name="roboguice.annotations.packages"
-        android:value="roboguice,databasename" />
+            android:name="roboguice.annotations.packages"
+            android:value="roboguice,databasename" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.android.vending.BILLING" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@android:style/Theme.NoTitleBar" >
-        <activity
-            android:name=".android.activities.SplashActivity"
+            android:allowBackup="true"
+            android:icon="@drawable/app_icon"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            >
+            tools:replace="android:icon"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        <activity
+                android:name=".android.activities.SplashActivity"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,31 +32,31 @@
 
         </activity>
         <activity
-            android:name=".android.activities.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:screenOrientation="portrait">
+                android:name=".android.activities.LoginActivity"
+                android:label="@string/title_activity_login"
+                android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name="com.facebook.LoginActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:windowSoftInputMode="stateUnspecified" />
+                android:name="com.facebook.LoginActivity"
+                android:label="@string/app_name"
+                android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                android:windowSoftInputMode="stateUnspecified" />
 
         <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/app_id" />
+                android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/app_id" />
 
         <provider
-            android:name="com.facebook.NativeAppCallContentProvider"
-            android:authorities="com.facebook.app.NativeAppCallContentProvider1425566607690211"
-            android:exported="true" />
+                android:name="com.facebook.NativeAppCallContentProvider"
+                android:authorities="com.facebook.app.NativeAppCallContentProvider1425566607690211"
+                android:exported="true" />
 
         <activity
-            android:name=".android.activities.DashboardActivity"
-            android:label="@string/title_activity_dashboard"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            >
+                android:name=".android.activities.DashboardActivity"
+                android:label="@string/title_activity_dashboard"
+                android:launchMode="singleTop"
+                android:screenOrientation="portrait"
+                >
         </activity>
     </application>
 
