--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion "23.0.1"
 
     defaultConfig {
@@ -28,8 +28,9 @@ repositories { mavenCentral() }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:21'
-    compile 'org.roboguice:roboguice:2.0'
+    compile 'com.android.support:appcompat-v7:23.+'
+    compile 'com.android.support:design:23.+'
+    compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
@@ -42,5 +43,6 @@ dependencies {
 //    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile project(':libs:facebook')
     compile files('libs/simple.facebook.jar')
+    compile 'org.roboguice:roboguice:2.0' // TODO remove this
 //    compile files('/Users/haris/AndroidStudioProjects/wagerocity-android/libs/simple.facebook.jar')
 }
