--- a/gradle.properties
+++ b/gradle.properties
@@ -15,7 +15,7 @@
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
 
 ANDROID_BUILD_MIN_SDK_VERSION=16
 ANDROID_BUILD_TARGET_SDK_VERSION=21
