--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,14 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
 
 android {
     compileSdkVersion 23
@@ -24,7 +34,8 @@ android {
     sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/'] } }
 }
 
-repositories { mavenCentral() }
+repositories { mavenCentral()
+    maven { url 'https://maven.fabric.io/public' } }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -45,4 +56,7 @@ dependencies {
     compile files('libs/simple.facebook.jar')
     compile 'org.roboguice:roboguice:2.0' // TODO remove this
 //    compile files('/Users/haris/AndroidStudioProjects/wagerocity-android/libs/simple.facebook.jar')
+    compile('com.crashlytics.sdk.android:crashlytics:2.3.0@aar') {
+        transitive = true;
+    }
 }
