--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,29 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.20.1'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
-    compileSdkVersion 22
-    buildToolsVersion "23.0.1"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.plegotech.wagerocity"
         minSdkVersion 16
-        targetSdkVersion 23
-        versionCode 8
-        versionName "1.0"
+        targetSdkVersion rootProject.ext.targetSdkVersion
+        versionCode rootProject.ext.versionCode
+        versionName rootProject.ext.versionName
+    }
+    lintOptions {
+        abortOnError false
     }
     buildTypes {
         release {
@@ -22,9 +36,11 @@ android {
         targetCompatibility JavaVersion.VERSION_1_7
     }
     sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/'] } }
+    tasks.findByPath(":libs:facebook:androidJavadocs").enabled = false
 }
 
-repositories { mavenCentral() }
+repositories { mavenCentral()
+    maven { url 'https://maven.fabric.io/public' } }
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
@@ -39,8 +55,13 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'cn.pedant.sweetalert:library:1.3'
-//    compile 'com.facebook.android:facebook-android-sdk:4.0.0'
     compile project(':libs:facebook')
     compile files('libs/simple.facebook.jar')
-//    compile files('/Users/haris/AndroidStudioProjects/wagerocity-android/libs/simple.facebook.jar')
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
+        transitive = true;
+    }
+
+    apt 'com.google.dagger:dagger-compiler:2.0'
+    compile 'com.google.dagger:dagger:2.0'
+    provided 'javax.annotation:jsr250-api:1.0'
 }
