--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    buildTypes {
+        debug {
+            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
+        }
+        release {
+            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
+        }
+    }
+
     sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/'] } }
     tasks.findByPath(":libs:facebook:androidJavadocs").enabled = false
 }
@@ -47,6 +57,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.+'
     compile 'com.android.support:design:23.+'
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'org.roboguice:roboguice:2.0'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.google.code.gson:gson:2.3'
     compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
@@ -58,7 +69,7 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     compile project(':libs:facebook')
     compile files('libs/simple.facebook.jar')
-    compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
+    compile('com.crashlytics.sdk.android:crashlytics:2.3.0@aar') {
         transitive = true;
     }
 
