--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,16 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
+
+    buildTypes {
+        debug {
+            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
+        }
+        release {
+            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
+        }
+    }
+
     sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/'] } }
     tasks.findByPath(":libs:facebook:androidJavadocs").enabled = false
 }
