--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,26 +25,35 @@ android {
     lintOptions {
         abortOnError false
     }
+    signingConfigs{
+        staging{
+            storeFile file('staging.keystore.jks')
+            storePassword 'plego123'
+            keyAlias 'Plego'
+            keyPassword 'plego123'
+        }
+    }
     buildTypes {
+        debug {
+            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
+            buildConfigField("boolean", "ENABLE_CRASHLYTICS", "false")
+        }
+        staging {
+            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
+            buildConfigField("boolean", "ENABLE_CRASHLYTICS", "true")
+            signingConfig signingConfigs.staging
+        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
+            buildConfigField("boolean", "ENABLE_CRASHLYTICS", "true")
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
-
-    buildTypes {
-        debug {
-            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
-        }
-        release {
-            buildConfigField("String", "BASE_URL", "\"http://api.wagerocity.com\"")
-        }
-    }
-
     sourceSets { main { java.srcDirs = ['src/main/java', 'src/main/java/'] } }
     tasks.findByPath(":libs:facebook:androidJavadocs").enabled = false
 }
@@ -68,7 +77,7 @@ dependencies {
     compile 'cn.pedant.sweetalert:library:1.3'
     compile project(':libs:facebook')
     compile files('libs/simple.facebook.jar')
-    compile('com.crashlytics.sdk.android:crashlytics:2.3.0@aar') {
+    compile('com.crashlytics.sdk.android:crashlytics:2.5.2@aar') {
         transitive = true;
     }
 
