--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,5 +84,6 @@ dependencies {
     apt 'com.google.dagger:dagger-compiler:2.0'
     compile 'com.google.dagger:dagger:2.0'
     provided 'javax.annotation:jsr250-api:1.0'
+    compile 'com.squareup:otto:1.3.8'
     compile 'org.roboguice:roboguice:2.0' // TODO remove this
 }
