--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.plego.wagerocity"
+          xmlns:tools="http://schemas.android.com/tools"
+          package="com.plego.wagerocity"
 
-    >
+        >
 
     <meta-data
-        android:name="roboguice.annotations.packages"
-        android:value="roboguice,databasename" />
+            android:name="roboguice.annotations.packages"
+            android:value="roboguice,databasename" />
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="com.android.vending.BILLING" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+    <permission android:name="com.example.gcm.permission.C2D_MESSAGE"
+                android:protectionLevel="signature" />
+    <uses-permission android:name="com.example.gcm.permission.C2D_MESSAGE" />
 
     <application
-        android:name=".android.WagerocityApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/app_icon"
-        android:label="@string/app_name"
-        tools:replace="android:icon"
-        android:theme="@android:style/Theme.NoTitleBar" >
-        <activity
-            android:name=".android.activities.SplashActivity"
+            android:name=".android.WagerocityApplication"
+            android:allowBackup="true"
+            android:icon="@drawable/app_icon"
             android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            >
+            tools:replace="android:icon"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        <activity
+                android:name=".android.activities.SplashActivity"
+                android:label="@string/app_name"
+                android:screenOrientation="portrait"
+                >
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -33,35 +38,59 @@
 
         </activity>
         <activity
-            android:name=".android.activities.LoginActivity"
-            android:label="@string/title_activity_login"
-            android:screenOrientation="portrait">
+                android:name=".android.activities.LoginActivity"
+                android:label="@string/title_activity_login"
+                android:screenOrientation="portrait">
         </activity>
         <activity
-            android:name="com.facebook.LoginActivity"
-            android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
-            android:windowSoftInputMode="stateUnspecified" />
+                android:name="com.facebook.LoginActivity"
+                android:label="@string/app_name"
+                android:theme="@android:style/Theme.Translucent.NoTitleBar"
+                android:windowSoftInputMode="stateUnspecified" />
 
         <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/app_id" />
+                android:name="com.facebook.sdk.ApplicationId"
+                android:value="@string/app_id" />
 
         <provider
-            android:name="com.facebook.NativeAppCallContentProvider"
-            android:authorities="com.facebook.app.NativeAppCallContentProvider1425566607690211"
-            android:exported="true" />
+                android:name="com.facebook.NativeAppCallContentProvider"
+                android:authorities="com.facebook.app.NativeAppCallContentProvider1425566607690211"
+                android:exported="true" />
 
         <activity
-            android:name=".android.activities.DashboardActivity"
-            android:label="@string/title_activity_dashboard"
-            android:launchMode="singleTop"
-            android:screenOrientation="portrait"
-            >
+                android:name=".android.activities.DashboardActivity"
+                android:label="@string/title_activity_dashboard"
+                android:launchMode="singleTop"
+                android:screenOrientation="portrait"
+                >
         </activity>
         <meta-data
-            android:name="io.fabric.ApiKey"
-            android:value="0319e1744299a79c26cebf40fb16d3a81905ffc7" />
+                android:name="io.fabric.ApiKey"
+                android:value="0319e1744299a79c26cebf40fb16d3a81905ffc7" />
+
+        <receiver
+                android:name="com.google.android.gms.gcm.GcmReceiver"
+                android:exported="true"
+                android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.example.gcm" />
+            </intent-filter>
+        </receiver>
+        <service
+                android:name="com.example.MyGcmListenerService"
+                android:exported="false" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+            </intent-filter>
+        </service>
+        <service
+                android:name="com.example.MyInstanceIDListenerService"
+                android:exported="false">
+            <intent-filter>
+                <action android:name="com.google.android.gms.iid.InstanceID"/>
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
