--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -84,12 +84,10 @@
                 <action android:name="com.google.android.c2dm.intent.RECEIVE" />
             </intent-filter>
         </service>
-        <service
-                android:name="com.example.MyInstanceIDListenerService"
-                android:exported="false">
-            <intent-filter>
-                <action android:name="com.google.android.gms.iid.InstanceID"/>
-            </intent-filter>
+        <service android:name="[.MyInstanceIDService]" android:exported="false">
+          <intent-filter>
+                 <action android:name="com.google.android.gms.iid.InstanceID"/>
+          </intent-filter>
         </service>
     </application>
 
