Working on gcm push

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -89,6 +89,7 @@
                  <action android:name="com.google.android.gms.iid.InstanceID"/>
           </intent-filter>
         </service>
+		<service android:name=".android.gcm.RegistrationIntentService" />
 
     </application>
 
