--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,8 +76,9 @@ dependencies {
     compile( 'com.crashlytics.sdk.android:crashlytics:2.5.2@aar' ) {
         transitive = true;
     }
-
+    compile 'com.google.dagger:dagger:2.0'
     apt 'com.google.dagger:dagger-compiler:2.0'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
     provided 'javax.annotation:jsr250-api:1.0'
     // TODO remove this
     compile 'com.android.support:appcompat-v7:23.0.1'
@@ -92,7 +93,6 @@ dependencies {
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'cn.pedant.sweetalert:library:1.3'
-    compile 'com.google.dagger:dagger:2.0'
     compile 'com.squareup:otto:1.3.8'
     compile 'org.roboguice:roboguice:2.0'
     compile 'com.google.android.gms:play-services-gcm:8.1.0'
